# Arduino_UVOS_STM32

./: README.md  README_CMAKE.md  boards.txt  package.json  platform.txt
cmake/: boards_db.cmake  build_sketch.cmake  set_base_arduino_config.cmake
cores/arduino/: Arduino.h  CMakeLists.txt  board.c  board.h  main.cpp  time.c  time.h  variant.h
cores/arduino/stm32/: clock.c  clock.h  dwt.c  dwt.h  misc.c  misc.h  stm32_def.h  stm32yyxx_hal_conf.h  sys_clocks.c  sys_clocks.h  syscalls.c
cores/arduino/stm32/usb/: usb_device.c  usb_device.h  usb_device_cdc.c  usbd_cdc_if.c  usbd_conf.c  usbd_conf.h  usbd_desc.c
cores/arduino/uvos/: uvos.h  uvos_config.h
cores/arduino/uvos/common/: uvos_delay.c  uvos_gpio.c  uvos_heap.c  uvos_led.c  uvos_mutex.c  uvos_queue.c  uvos_sys.c  uvos_time.c  uvos_usart.c
cores/arduino/uvos/hal/: uvos_usart_xx.c
cores/arduino/uvos/inc/: stm32f4xx_conf.h  stm32h7xx_conf.h  uvos_math.h  uvos_mutex.h  uvos_queue.h  uvos_semaphore.h  uvos_stm32.h  uvos_sys.h  uvos_tim_priv.h  uvos_time.h
libraries/: CMakeLists.txt
libraries/mavlink_c_v1/: CMakeLists.txt
system/STM32F4xx/: stm32f4xx_usbd_conf.c  uvos_usart.c
system/STM32H7xx/: uvos_usart.c
system/extras/BareMinimum/: BareMinimum.ino
system/extras/Blink/: Blink.ino  CMakeLists.txt
variants/STM32F4xx/Dev_Blackpill_F401CC/: CMakeLists.txt  board_hw_defs.c.inc  usbd_conf.h  uvos_board.c  uvos_board.h  variant_BLACKPILL_F401Cx.cpp  variant_BLACKPILL_F401Cx.h
variants/STM32F4xx/Dev_Blackpill_F411CE/: CMakeLists.txt  ldscript.ld  uvos_board.h  variant_BLACKPILL_F411CE.cpp
variants/STM32F4xx/F401R(B-C-D-E)T/: CMakeLists.txt  variant_NUCLEO_F401RE.cpp
variants/STM32F4xx/F407V(E-G)T_F417V(E-G)T/: CMakeLists.txt  usbd_conf.c  variant_DISCO_F407VG.cpp
variants/STM32F4xx/F411R(C-E)T/: CMakeLists.txt  variant_NUCLEO_F411RE.cpp
variants/STM32F4xx/FC_Revo_F405RG/: CMakeLists.txt  variant_FC_REVO_F405RG.cpp  variant_FC_REVO_F405RG.h
variants/STM32H7xx/Dev_DevEBoxH7xx/: CMakeLists.txt  board_hw_defs.c.inc  ldscript.ld  usbd_conf.c  uvos_board.h  variant_DevEBoxH7xx.cpp  variant_DevEBoxH7xx.h
